:lipstick: refazendo o site
Decidi alterar o layout do site para ficar mais completo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3 class="contacts number">(83) 99402-3563</h3>
         <img src="./assets/icons/mail icon.svg" alt="icone de email " class="header-icons">
         <h3 class="contacts mail">lacerdalucas27@gmail.com</h3>
-        <h3 class="promocao">Siga-nos e concorra a 80% de desconto</h3>
+        <h3 class="promocao"> Siga-nos e concorra a 80% de desconto</h3>
         <div class="socials">
             <h3>Siga-nos:</h3> <img src="./assets/icons/instagram icon.svg" alt="icone do instagram"
                 class="social-icons"><img src="./assets/icons/youtube icon.svg" alt="icone do youtube"
@@ -30,19 +30,19 @@
                 <li class="menu-buttons">Home</li>
             </a>
             <a href="#">
-                <li class="menu-buttons categorias-container">
-                    <h4 class="menu-buttons categorias-button" id="categorias">Categorias</h4> 
+                <li class="menu-buttons shop-container">
+                    <h4 class="menu-buttons shop-button" id="shop">Shop</h4>
                     <div class=" vector" id="vectorLeft">
-                        </div>
-                        <div class="vector" id="vectorRight"></div>
+                    </div>
+                    <div class="vector" id="vectorRight"></div>
                 </li>
             </a>
-            <div id="categorias-submenu">
-                <img  class="triangle" src="./assets/images/Design sem nome (1).png" >
-                <button class="categorias-submenu-buttons">Decoração</button>
-                <button class="categorias-submenu-buttons">Cozinha e Utensílios</button>
-                <button class="categorias-submenu-buttons">Têxteis para Casa</button>
-                <button class="categorias-submenu-buttons">Móveis e Mobília</button>
+            <div id="shop-submenu">
+                <img class="triangle" src="./assets/images/Design sem nome (1).png">
+                <button class="shop-submenu-buttons">Men</button>
+                <button class="shop-submenu-buttons">Woman</button>
+                <button class="shop-submenu-buttons">Accessories</button>
+                <button class="shop-submenu-buttons">Kids</button>
             </div>
             <a href="#">
                 <li class="menu-buttons">About</li>
@@ -79,22 +79,20 @@
         </ul>
     </nav>
     <main>
- <section class="desktop-cards">
-    <div class="cards card1">
-        <h1 class="card-title">Decoração</h1>
-    </div>
-    <div class="cards card1">
-        <h1 class="card-title">Cozinha e utensílios</h1>
-    </div>
-    <div class="cards card1">
-        <h1 class="card-title">Têxteis para casa</h1>
-    </div>
-    <div class="cards card1">
-        <h1 class="card-title">Móveis e mobília</h1>
-    </div>
- </section>
+        <section class="slide1">
+        </section>
+        <section class="categories">
+            <h1 class="title-section">EDITOR'S PICK</h1>
+            <p class="description">Problems trying to resolve the conflict between</p>
+            <div class="grid-categories">
+                <img class="cards card1" src="./assets/images/men-image.png" alt="men-image">
+                <img class="cards card1" src="./assets/images/women-image.png" alt="woman-image">
+                <img class="cards card1" src="./assets/images/accessories-image.png" alt="accessories-image">
+                <img class="cards card1" src="./assets/images/kids-image.png" alt="kids-image">
+            </div>
+        </section>
     </main>
-<script src="./index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
