:construction: correções e alinhamentos do home

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3 class="contacts number">(83) 99402-3563</h3>
         <img src="./assets/icons/mail icon.svg" alt="icone de email " class="header-icons">
         <h3 class="contacts mail">lacerdalucas27@gmail.com</h3>
-        <h3 class="promocao"> Siga-nos e concorra a 80% de desconto</h3>
+        <h3 class="promocao"> Follow Us and get a chance to win 80% off</h3>
         <div class="socials">
             <h3>Siga-nos:</h3> <img src="./assets/icons/instagram icon.svg" alt="icone do instagram"
                 class="social-icons"><img src="./assets/icons/youtube icon.svg" alt="icone do youtube"
@@ -24,7 +24,7 @@
         </div>
     </header>
     <nav>
-        <h1 class="site-name">BrandName</h1>
+        <h1 class="site-name">Bandage</h1>
         <ul class="menu-container">
             <a href="#">
                 <li class="menu-buttons">Home</li>
@@ -51,7 +51,7 @@
                 <li class="menu-buttons">Blog</li>
             </a>
             <a href="#">
-                <li class="menu-buttons">Trabalhe conosco</li>
+                <li class="menu-buttons">Contact</li>
             </a>
             <a href="#">
                 <li class="menu-buttons">Pages</li>
@@ -79,19 +79,54 @@
         </ul>
     </nav>
     <main>
-        <section class="slide1">
-        </section>
-        <section class="categories">
-            <h1 class="title-section">EDITOR'S PICK</h1>
-            <p class="description">Problems trying to resolve the conflict between</p>
-            <div class="grid-categories">
-                <img class="cards card1" src="./assets/images/men-image.png" alt="men-image">
-                <img class="cards card1" src="./assets/images/women-image.png" alt="woman-image">
-                <img class="cards card1" src="./assets/images/accessories-image.png" alt="accessories-image">
-                <img class="cards card1" src="./assets/images/kids-image.png" alt="kids-image">
+        <section class="initial">
+            <div class="collection">
+                <div class="collection-text">
+                    <h5 class="collection-date">SUMMER 2020</h5>
+                    <h1 class="collection-title">NEW COLLECTION</h1>
+                    <h4 class="collection-description">
+                        We know how large objects will act,<br />
+                        but things on a small scale.
+                    </h4>
+                    <button class="shop-collection-btn">SHOP NOW</button>
+                </div>
+                <img class="collection-image" src="./assets/images/technology 1.png">
+            </div>
+            <div class="shop-media">
+                <img src="./assets/icons/hooly icon.svg" alt="hooly icon">
+                <img src="./assets/icons/lyft icon.svg" alt="lyft icon">
+                <img src="./assets/icons/cap icon.svg" alt="cap icon">
+                <img src="./assets/icons/stripe icon.svg" alt="stripe icon">
+                <img src="./assets/icons/aws icon.svg" alt="aws icon">
+                <img src="./assets/icons/reddit icon.svg" alt="redit icon">
+
             </div>
         </section>
+        <section class="bests">
+            <div class="cards card1">
+                <div class="cards-description card1-description">
+                    <h3 class="card1-title">Top Product Of<br /> the Week</h3>
+                    <button class="more-btn">EXPLORE ITENS</button>
+                </div>
+            </div>
+            <div class="cards card2">
+                <div class="cards-description card2-description">
+                    <h3 class="cards-title">Top Product Of the Week</h3>
+                    <button class="more-btn">EXPLORE ITENS</button>
+                </div>
+            </div>
+            <div class="cards card3">
+                <div class="cards-description card3-description">
+                    <h3 class="cards-title">Top Product Of the Week</h3>
+                    <button class="more-btn">EXPLORE ITENS</button>
+                </div>
+            </div>
+        </section>
+
     </main>
+    <footer>
+
+    </footer>
     <script src="./index.js"></script>
 </body>
 
