:lipstick:  all the rest of the HTML

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
         <h3 class="contacts mail">lacerdalucas27@gmail.com</h3>
         <h3 class="promocao"> Follow Us and get a chance to win 80% off</h3>
         <div class="socials">
-            <h3>Siga-nos:</h3> <img src="./assets/icons/instagram icon.svg" alt="icone do instagram"
-                class="social-icons"><img src="./assets/icons/youtube icon.svg" alt="icone do youtube"
-                class="social-icons"><img src="./assets/icons/facebook icon.svg" alt="icone do facebook"
-                class="social-icons"><img src="./assets/icons/twitter icon.svg" alt="icone do twitter"
-                class="social-icons">
+            <h3>Siga-nos:</h3>
+            <a href="#">
+                <img src="./assets/icons/instagram icon.svg" alt="icone do instagram"
+                    class="social-icons instagram-icon"></a>
+            <a href="#"><img src="./assets/icons/youtube icon.svg" alt="icone do youtub"
+                    class="social-icons youtube-icon"> </a>
+            <a href="#">
+                <img src="./assets/icons/facebook icon.svg" alt="icone do facebook" class="social-icons facebook-icon">
+            </a>
+            <a href="#">
+                <img src="./assets/icons/twitter icon.svg" alt="icone do twitter" class="social-icons twitter-icon">
+            </a>
         </div>
     </header>
     <nav>
@@ -39,10 +46,18 @@
             </a>
             <div id="shop-submenu">
                 <img class="triangle" src="./assets/images/Design sem nome (1).png">
-                <button class="shop-submenu-buttons">Men</button>
-                <button class="shop-submenu-buttons">Woman</button>
-                <button class="shop-submenu-buttons">Accessories</button>
-                <button class="shop-submenu-buttons">Kids</button>
+                <a href="#">
+                    <button class="shop-submenu-buttons">Men</button>
+                </a>
+                <a href="#">
+                    <button class="shop-submenu-buttons">Woman</button>
+                </a>
+                <a href="#">
+                    <button class="shop-submenu-buttons">Accessories</button>
+                </a>
+                <a href="#">
+                    <button class="shop-submenu-buttons">Kids</button>
+                </a>
             </div>
             <a href="#">
                 <li class="menu-buttons">About</li>
@@ -88,17 +103,38 @@
                         We know how large objects will act,<br />
                         but things on a small scale.
                     </h4>
-                    <button class="shop-collection-btn">SHOP NOW</button>
+                    <a href="#">
+                        <button class="shop-collection-btn">SHOP NOW</button>
+                    </a>
                 </div>
-                <img class="collection-image" src="./assets/images/technology 1.png">
+                <div class="collection-images-container">
+                    <div class="circle1 circles"></div>
+                    <div class="circle2 circles"></div>
+                    <div class="circle3 circles"></div>
+                    <div class="circle4 circles"></div>
+                    <img class="collection-image-woman" src="./assets/images/technology 1.png">
+
+                </div>
             </div>
             <div class="shop-media">
-                <img src="./assets/icons/hooly icon.svg" alt="hooly icon">
-                <img src="./assets/icons/lyft icon.svg" alt="lyft icon">
-                <img src="./assets/icons/cap icon.svg" alt="cap icon">
-                <img src="./assets/icons/stripe icon.svg" alt="stripe icon">
-                <img src="./assets/icons/aws icon.svg" alt="aws icon">
-                <img src="./assets/icons/reddit icon.svg" alt="redit icon">
+                <a href="#">
+                    <img src="./assets/icons/hooly icon.svg" alt="hooly icon">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/lyft icon.svg" alt="lyft icon">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/cap icon.svg" alt="cap icon">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/stripe icon.svg" alt="stripe icon">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/aws icon.svg" alt="aws icon">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/reddit icon.svg" alt="redit icon">
+                </a>
 
             </div>
         </section>
@@ -106,26 +142,224 @@
             <div class="cards card1">
                 <div class="cards-description card1-description">
                     <h3 class="card1-title">Top Product Of<br /> the Week</h3>
-                    <button class="more-btn">EXPLORE ITENS</button>
+                    <a href="#"><button class="more-btn">EXPLORE ITENS</button></a>
                 </div>
             </div>
             <div class="cards card2">
                 <div class="cards-description card2-description">
                     <h3 class="cards-title">Top Product Of the Week</h3>
-                    <button class="more-btn">EXPLORE ITENS</button>
+                    <a href="#">
+                        <button class="more-btn">EXPLORE ITENS</button>
+                    </a>
                 </div>
             </div>
             <div class="cards card3">
                 <div class="cards-description card3-description">
                     <h3 class="cards-title">Top Product Of the Week</h3>
-                    <button class="more-btn">EXPLORE ITENS</button>
+                    <a href="#"><button class="more-btn">EXPLORE ITENS</button></a>
                 </div>
             </div>
         </section>
+        <section class="bestseller-products">
+            <h4 class="subtitle">Featured Products</h4>
+            <h3 class="title">BESTSELLER PRODUCTS</h3>
+            <ul class="bestsellers-products-list">
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (1).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="assets/images/product-cover-5 (3).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (4).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (5).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (6).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (7).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (1).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (3).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (8).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <li class="bestseller-products">
+                    <img class="bestseller-images" src="./assets/images/product-cover-5 (7).png">
+                    <h4 class="bestseller-product-titles">Graphic Design</h4>
+                    <h5 class="class-of-product">English Department</h5>
+                    <h5 class="bestseller-product-price">$16.48 <span class="discount">$6.48</span></h5>
+                </li>
+                <a class="load-more-link">
+                    <button class="load-more">LOAD MORE PRODUCTS</button></a>
+            </ul>
+        </section>
+        <div class="featured-products">
+            <img src="./assets/images/unsplash_Lks7vei-eAg.png">
+            <img src="./assets/images/unsplash_Lks7vei-eAg (1).png">
+            <div class="text-container">
+                <h3>Featured Products</h3>
+                <h1 class="featured-products-title">We love what we do</h1>
+                <p class="first-paragraph">Problems trying to resolve the conflict between
+                    the two major realms of Classical physics:
+                    Newtonian mechanics.
+                </p>
+                <p class="second-paragraph">Problems trying to resolve the conflict between
+                    the two major realms of Classical physics:
+                    Newtonian mechanics.</p>
+            </div>
+        </div>
+        <div class="the-best-services-container">
+            <h3 class="the-best-service-sub-title">Featured Products</h3>
+            <h1 class="the-best-service-title">THE BEST SERVICES</h1>
+            <p class="the-best-service-text">Problems trying to resolve the conflict between</p>
 
+            <ul class="bests-services-types">
+                <li>
+                    <img src="./assets/icons/easy-wins-icon.svg" alt="Book open">
+                    <h3 class="best-service-title">Easy wins</h3>
+                    <h4 class="best-service-description">Get your best looking smile now!</h4>
+                </li>
+                <li>
+                    <img src="./assets/icons/concrete-icon.svg" alt="Pages">
+                    <h3 class="best-service-title">Concrete</h3>
+                    <h4 class="best-service-description">Defalcate is most focused in helping you discover your most
+                        beautiful smile</h4>
+                </li>
+                <li>
+                    <img src="./assets/icons/hack-icon.svg" alt="graph rising">
+                    <h3 class="best-service-title">Hack Growth</h3>
+                    <h4 class="best-service-description">Overcame any hurdle or any other problem.</h4>
+                </li>
+            </ul>
+        </div>
+        <div class="featured-posts-container">
+            <h4 class="featured-posts-category">Pratice Advice</h4>
+            <h2 class="featured-posts-title">Featured Posts</h2>
+            <div class="featured-posts-card">
+                <div class="image-card">
+
+                </div>
+                <h4 class="card-category">English Department</h4>
+                <h4 class="hating-number"> <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M16 6.3H10.275L8.5 0.75L6.725 6.3H1L5.625 9.725L3.875 15.25L8.5 11.825L13.125 15.25L11.35 9.7L16 6.3Z"
+                            fill="#FFCE31" />
+                    </svg> 4,5
+                </h4>
+                <h3 class="card-title">Graphic Design</h3>
+                <p class="description">We focus on ergonomics and
+                    meeting you where you work. It's
+                    only a keystroke away.</p>
+
+                <h4 class="sales-number">
+                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_3725_226)">
+                            <path
+                                d="M1 9.8999C1.13261 9.8999 1.25979 9.95258 1.35355 10.0463C1.44732 10.1401 1.5 10.2673 1.5 10.3999V12.8999C1.5 13.1651 1.60536 13.4195 1.79289 13.607C1.98043 13.7945 2.23478 13.8999 2.5 13.8999H14.5C14.7652 13.8999 15.0196 13.7945 15.2071 13.607C15.3946 13.4195 15.5 13.1651 15.5 12.8999V10.3999C15.5 10.2673 15.5527 10.1401 15.6464 10.0463C15.7402 9.95258 15.8674 9.8999 16 9.8999C16.1326 9.8999 16.2598 9.95258 16.3536 10.0463C16.4473 10.1401 16.5 10.2673 16.5 10.3999V12.8999C16.5 13.4303 16.2893 13.939 15.9142 14.3141C15.5391 14.6892 15.0304 14.8999 14.5 14.8999H2.5C1.96957 14.8999 1.46086 14.6892 1.08579 14.3141C0.710714 13.939 0.5 13.4303 0.5 12.8999V10.3999C0.5 10.2673 0.552678 10.1401 0.646447 10.0463C0.740215 9.95258 0.867392 9.8999 1 9.8999Z"
+                                fill="#737373" />
+                            <path
+                                d="M8.1459 11.854C8.19234 11.9006 8.24752 11.9375 8.30827 11.9627C8.36901 11.9879 8.43413 12.0009 8.4999 12.0009C8.56567 12.0009 8.63079 11.9879 8.69153 11.9627C8.75228 11.9375 8.80745 11.9006 8.8539 11.854L11.8539 8.854C11.9478 8.76011 12.0005 8.63278 12.0005 8.5C12.0005 8.36722 11.9478 8.23989 11.8539 8.146C11.76 8.05211 11.6327 7.99937 11.4999 7.99937C11.3671 7.99937 11.2398 8.05211 11.1459 8.146L8.9999 10.293V1.5C8.9999 1.36739 8.94722 1.24021 8.85345 1.14645C8.75969 1.05268 8.63251 1 8.4999 1C8.36729 1 8.24011 1.05268 8.14635 1.14645C8.05258 1.24021 7.9999 1.36739 7.9999 1.5V10.293L5.8539 8.146C5.76001 8.05211 5.63268 7.99937 5.4999 7.99937C5.36712 7.99937 5.23979 8.05211 5.1459 8.146C5.05201 8.23989 4.99927 8.36722 4.99927 8.5C4.99927 8.63278 5.05201 8.76011 5.1459 8.854L8.1459 11.854Z"
+                                fill="#737373" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_3725_226">
+                                <rect width="16" height="16" fill="white" transform="translate(0.5)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    15 sales
+                </h4>
+
+            </div>
+        </div>
     </main>
     <footer>
-
+        <div class="footer-container-left footer-containers">
+            <h3 class="footer-titles">Get in Touch</h3>
+            <p class="description">The quick fox jumps over the<br /> lazy dog</p>
+            <div class="socials">
+                <a href="#">
+                    <img src="./assets/icons/instagram icon.svg" alt="icone do instagram" class="social-icons"></a>
+                <a href="#">
+                    <img src="./assets/icons/facebook icon.svg" alt="icone do facebook" class="social-icons">
+                </a>
+                <a href="#">
+                    <img src="./assets/icons/twitter icon.svg" alt="icone do twitter" class="social-icons">
+                </a>
+            </div>
+        </div>
+        <div class="footer-container-center footer-containers">
+            <h3 class="footer-titles">Company info</h3>
+            <ul>
+                <a href="#">
+                    <li>About Us</li>
+                </a>
+                <a href="#">
+                    <li>Carrier</li>
+                </a>
+                <a href="#">
+                    <li>We are hiring</li>
+                </a>
+                <a href="#">
+                    <li>Blog</li>
+                </a>
+            </ul>
+        </div>
+        <div class="footer-container-right footer-containers">
+            <h3 class="footer-titles">
+                Features
+            </h3>
+            <ul>
+                <a href="#">
+                    <li>Bussiness Marketing</li>
+                </a>
+                <a href="#">
+                    <li>User Analytic</li>
+                </a>
+                <a href="#">
+                    <li>Live Chat</li>
+                </a>
+                <a href="#">
+                    <li>Unlimited Support</li>
+                </a>
+            </ul>
+        </div>
     </footer>
     <script src="./index.js"></script>
 </body>
