:lipstick: more HTML and images add

--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
             <a href="#">
                 <img src="./assets/icons/instagram icon.svg" alt="icone do instagram"
                     class="social-icons instagram-icon"></a>
-            <a href="#"><img src="./assets/icons/youtube icon.svg" alt="icone do youtub"
-                    class="social-icons youtube-icon"> </a>
+            <a href="#"><svg class="social-icons youtube-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16"
+                    viewBox="0 0 17 16" fill="none">
+                    <g clip-path="url(#clip0_3017_11299)">
+                        <path
+                            d="M9.051 1.99927H9.14C9.962 2.00227 14.127 2.03227 15.25 2.33427C15.5895 2.42644 15.8989 2.60609 16.1472 2.85528C16.3955 3.10446 16.574 3.41445 16.665 3.75427C16.766 4.13427 16.837 4.63727 16.885 5.15627L16.895 5.26027L16.917 5.52027L16.925 5.62427C16.99 6.53827 16.998 7.39427 16.999 7.58127V7.65627C16.998 7.85027 16.989 8.76427 16.917 9.71627L16.909 9.82127L16.9 9.92527C16.85 10.4973 16.776 11.0653 16.665 11.4833C16.5743 11.8232 16.3958 12.1334 16.1475 12.3826C15.8991 12.6318 15.5896 12.8114 15.25 12.9033C14.09 13.2153 9.681 13.2373 9.07 13.2383H8.928C8.619 13.2383 7.341 13.2323 6.001 13.1863L5.831 13.1803L5.744 13.1763L5.573 13.1693L5.402 13.1623C4.292 13.1133 3.235 13.0343 2.748 12.9023C2.40849 12.8105 2.09907 12.6311 1.85072 12.382C1.60238 12.133 1.42385 11.823 1.333 11.4833C1.222 11.0663 1.148 10.4973 1.098 9.92527L1.09 9.82027L1.082 9.71627C1.03265 9.03867 1.0053 8.35964 1 7.68027L1 7.55727C1.002 7.34227 1.01 6.59927 1.064 5.77927L1.071 5.67627L1.074 5.62427L1.082 5.52027L1.104 5.26027L1.114 5.15627C1.162 4.63727 1.233 4.13327 1.334 3.75427C1.42469 3.41432 1.60316 3.10418 1.85151 2.85495C2.09986 2.60572 2.40937 2.42616 2.749 2.33427C3.236 2.20427 4.293 2.12427 5.403 2.07427L5.573 2.06727L5.745 2.06127L5.831 2.05827L6.002 2.05127C6.95371 2.02064 7.90581 2.00364 8.858 2.00027H9.051V1.99927ZM7.4 5.20927V10.0273L11.557 7.61927L7.4 5.20927Z"
+                            fill="white" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_3017_11299">
+                            <rect width="16" height="16" fill="white" transform="translate(0.5 0.000244141)" />
+                        </clipPath>
+                    </defs>
+                </svg> </a>
             <a href="#">
                 <img src="./assets/icons/facebook icon.svg" alt="icone do facebook" class="social-icons facebook-icon">
             </a>
@@ -75,7 +86,8 @@
         <ul class="login-chart">
             <a href="#">
                 <li class="links login"><img class="login-icon icons" src="./assets/icons/login icon.svg">
-                    Login/Register</li>
+                    Login/Register
+                </li>
             </a>
             <a href="#">
                 <li class="links"><img class="search-icon icons" src="./assets/icons/search icon.svg"></li>
@@ -100,8 +112,7 @@
                     <h5 class="collection-date">SUMMER 2020</h5>
                     <h1 class="collection-title">NEW COLLECTION</h1>
                     <h4 class="collection-description">
-                        We know how large objects will act,<br />
-                        but things on a small scale.
+                        We know how large objects will act,<br /> but things on a small scale.
                     </h4>
                     <a href="#">
                         <button class="shop-collection-btn">SHOP NOW</button>
@@ -232,15 +243,13 @@
             <img src="./assets/images/unsplash_Lks7vei-eAg.png">
             <img src="./assets/images/unsplash_Lks7vei-eAg (1).png">
             <div class="text-container">
-                <h3>Featured Products</h3>
+                <h3 class="subtitle-container">Featured Products</h3>
                 <h1 class="featured-products-title">We love what we do</h1>
-                <p class="first-paragraph">Problems trying to resolve the conflict between
-                    the two major realms of Classical physics:
-                    Newtonian mechanics.
+                <p class="first-paragraph">Problems trying to resolve the conflict between the two major realms of
+                    Classical physics: Newtonian mechanics.
                 </p>
-                <p class="second-paragraph">Problems trying to resolve the conflict between
-                    the two major realms of Classical physics:
-                    Newtonian mechanics.</p>
+                <p class="second-paragraph">Problems trying to resolve the conflict between the two major realms of
+                    Classical physics: Newtonian mechanics.</p>
             </div>
         </div>
         <div class="the-best-services-container">
@@ -268,45 +277,72 @@
             </ul>
         </div>
         <div class="featured-posts-container">
-            <h4 class="featured-posts-category">Pratice Advice</h4>
-            <h2 class="featured-posts-title">Featured Posts</h2>
-            <div class="featured-posts-card">
-                <div class="image-card">
+            <h3 class="subtitle-container">Pratice Advice</h3>
+            <h1 class="title-container">Featured Posts</h1>
+            <div class="featured-post">
+                <div class="chart-container">
+                    <h3 class="sale-seal">Sale</h3>
+                    <ul class="icons-list">
+                        <li heart-icon>
+                            <img src="./assets/icons/heart icon.svg" alt="Heart icon">
+                        </li>
+                        <li class="chart-icon">
+                            <img src="./assets/icons/" alt="Chart icon">
+                        </li>
+                        <li class="eye-icon"><img src="./assets/icons/eye icon.svg" alt="Eye icon"></li>
+                    </ul>
 
                 </div>
-                <h4 class="card-category">English Department</h4>
-                <h4 class="hating-number"> <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M16 6.3H10.275L8.5 0.75L6.725 6.3H1L5.625 9.725L3.875 15.25L8.5 11.825L13.125 15.25L11.35 9.7L16 6.3Z"
-                            fill="#FFCE31" />
-                    </svg> 4,5
-                </h4>
-                <h3 class="card-title">Graphic Design</h3>
-                <p class="description">We focus on ergonomics and
-                    meeting you where you work. It's
-                    only a keystroke away.</p>
+                <div class="description-container">
+                    <h3 class="subtitle-container">English Department <span class="hate"><svg width="17" height="16"
+                                viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M16 6.3H10.275L8.5 0.75L6.725 6.3H1L5.625 9.725L3.875 15.25L8.5 11.825L13.125 15.25L11.35 9.7L16 6.3Z"
+                                    fill="#FFCE31" />
+                            </svg>
+                            4,9
+                        </span></h3>
+                    <h2 class="title-post">Graphi Design</h2>
+                    <p class="description">We focus on ergonomics and
+                        meeting you where you work. It's
+                        only a keystroke away.</p>
 
-                <h4 class="sales-number">
-                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_3725_226)">
-                            <path
-                                d="M1 9.8999C1.13261 9.8999 1.25979 9.95258 1.35355 10.0463C1.44732 10.1401 1.5 10.2673 1.5 10.3999V12.8999C1.5 13.1651 1.60536 13.4195 1.79289 13.607C1.98043 13.7945 2.23478 13.8999 2.5 13.8999H14.5C14.7652 13.8999 15.0196 13.7945 15.2071 13.607C15.3946 13.4195 15.5 13.1651 15.5 12.8999V10.3999C15.5 10.2673 15.5527 10.1401 15.6464 10.0463C15.7402 9.95258 15.8674 9.8999 16 9.8999C16.1326 9.8999 16.2598 9.95258 16.3536 10.0463C16.4473 10.1401 16.5 10.2673 16.5 10.3999V12.8999C16.5 13.4303 16.2893 13.939 15.9142 14.3141C15.5391 14.6892 15.0304 14.8999 14.5 14.8999H2.5C1.96957 14.8999 1.46086 14.6892 1.08579 14.3141C0.710714 13.939 0.5 13.4303 0.5 12.8999V10.3999C0.5 10.2673 0.552678 10.1401 0.646447 10.0463C0.740215 9.95258 0.867392 9.8999 1 9.8999Z"
-                                fill="#737373" />
-                            <path
-                                d="M8.1459 11.854C8.19234 11.9006 8.24752 11.9375 8.30827 11.9627C8.36901 11.9879 8.43413 12.0009 8.4999 12.0009C8.56567 12.0009 8.63079 11.9879 8.69153 11.9627C8.75228 11.9375 8.80745 11.9006 8.8539 11.854L11.8539 8.854C11.9478 8.76011 12.0005 8.63278 12.0005 8.5C12.0005 8.36722 11.9478 8.23989 11.8539 8.146C11.76 8.05211 11.6327 7.99937 11.4999 7.99937C11.3671 7.99937 11.2398 8.05211 11.1459 8.146L8.9999 10.293V1.5C8.9999 1.36739 8.94722 1.24021 8.85345 1.14645C8.75969 1.05268 8.63251 1 8.4999 1C8.36729 1 8.24011 1.05268 8.14635 1.14645C8.05258 1.24021 7.9999 1.36739 7.9999 1.5V10.293L5.8539 8.146C5.76001 8.05211 5.63268 7.99937 5.4999 7.99937C5.36712 7.99937 5.23979 8.05211 5.1459 8.146C5.05201 8.23989 4.99927 8.36722 4.99927 8.5C4.99927 8.63278 5.05201 8.76011 5.1459 8.854L8.1459 11.854Z"
-                                fill="#737373" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_3725_226">
-                                <rect width="16" height="16" fill="white" transform="translate(0.5)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-                    15 sales
-                </h4>
 
+                    <h4 class="sales">
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_3742_387)">
+                                <path
+                                    d="M1 9.8999C1.13261 9.8999 1.25979 9.95258 1.35355 10.0463C1.44732 10.1401 1.5 10.2673 1.5 10.3999V12.8999C1.5 13.1651 1.60536 13.4195 1.79289 13.607C1.98043 13.7945 2.23478 13.8999 2.5 13.8999H14.5C14.7652 13.8999 15.0196 13.7945 15.2071 13.607C15.3946 13.4195 15.5 13.1651 15.5 12.8999V10.3999C15.5 10.2673 15.5527 10.1401 15.6464 10.0463C15.7402 9.95258 15.8674 9.8999 16 9.8999C16.1326 9.8999 16.2598 9.95258 16.3536 10.0463C16.4473 10.1401 16.5 10.2673 16.5 10.3999V12.8999C16.5 13.4303 16.2893 13.939 15.9142 14.3141C15.5391 14.6892 15.0304 14.8999 14.5 14.8999H2.5C1.96957 14.8999 1.46086 14.6892 1.08579 14.3141C0.710714 13.939 0.5 13.4303 0.5 12.8999V10.3999C0.5 10.2673 0.552678 10.1401 0.646447 10.0463C0.740215 9.95258 0.867392 9.8999 1 9.8999Z"
+                                    fill="#737373" />
+                                <path
+                                    d="M8.1459 11.854C8.19234 11.9006 8.24752 11.9375 8.30827 11.9627C8.36901 11.9879 8.43413 12.0009 8.4999 12.0009C8.56567 12.0009 8.63079 11.9879 8.69153 11.9627C8.75228 11.9375 8.80745 11.9006 8.8539 11.854L11.8539 8.854C11.9478 8.76011 12.0005 8.63278 12.0005 8.5C12.0005 8.36722 11.9478 8.23989 11.8539 8.146C11.76 8.05211 11.6327 7.99937 11.4999 7.99937C11.3671 7.99937 11.2398 8.05211 11.1459 8.146L8.9999 10.293V1.5C8.9999 1.36739 8.94722 1.24021 8.85345 1.14645C8.75969 1.05268 8.63251 1 8.4999 1C8.36729 1 8.24011 1.05268 8.14635 1.14645C8.05258 1.24021 7.9999 1.36739 7.9999 1.5V10.293L5.8539 8.146C5.76001 8.05211 5.63268 7.99937 5.4999 7.99937C5.36712 7.99937 5.23979 8.05211 5.1459 8.146C5.05201 8.23989 4.99927 8.36722 4.99927 8.5C4.99927 8.63278 5.05201 8.76011 5.1459 8.854L8.1459 11.854Z"
+                                    fill="#737373" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_3742_387">
+                                    <rect width="16" height="16" fill="white" transform="translate(0.5)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+
+                        15 salles
+                    </h4>
+                    <h4 class="price">$16.48 <span class="discount">$6.48</span></h4>
+                    <ul class="color-container">
+                        <li class="colors"></li>
+                        <li class="colors"></li>
+                        <li class="colors"></li>
+                        <li class="colors"></li>
+                    </ul>
+                    <h5 class="course-time"><img src="./assets/icons/clock icon.svg" alt="clock blue icon">22h...</h5>
+                    <h5 class="numer-lessons"><img src="./assets/icons/waves icon.svg" alt="Waves icon">64 Lessons</h5>
+                    <h5 class="progress"><img src="./assets/icons/green grafic icon.svg" alt="Graphic icon">Progress...
+                    </h5>
+
+                </div>
             </div>
+
+        </div>
         </div>
     </main>
     <footer>
